React to Cors api review changes

--- a/src/Microsoft.AspNet.Mvc.Cors/project.json
+++ b/src/Microsoft.AspNet.Mvc.Cors/project.json
@@ -9,7 +9,7 @@
         "warningsAsErrors": true
     },
     "dependencies": {
-        "Microsoft.AspNet.Cors.Core": "6.0.0-*",
+        "Microsoft.AspNet.Cors": "6.0.0-*",
         "Microsoft.AspNet.Mvc.Core": "6.0.0-*"
     },
 
